@@ -4,4 +4,6 @@ AUX open-vm.initd 1875 RMD160 9d2cc36fd93e70ae20eecd49b10c4da0e09aad69 SHA1 1702
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
 DIST open-vm-tools-2008.04.14-87182.tar.gz 2430703 RMD160 2003b86f881b8a9b51c61e833b0b7d4aca70e083 SHA1 0394f73975a34699b92ce90822803fdb365abc6f SHA256 34c19a50650e70fbaa3c1d01803cc96fd86dde4d5f1349bf444026a4b1016b07
+DIST open-vm-tools-2008.05.15-93241.tar.gz 2462536 RMD160 6482557a2bfd5628093e7d02262c6cb1f072c334 SHA1 58c1861ffdedb205fe58f65b29ad47bf72ded836 SHA256 465657c6c59b88458bb6bf8a5411ab7d1e5aef548e931b4291c8cec1cba55ea3
 EBUILD open-vm-tools-0.0.20080414.87182.ebuild 3593 RMD160 891c7a258b04f036c89343009a948a7f2cad4525 SHA1 e77e4a728811063dfffca09d49aa30bf26b938a6 SHA256 10a5204df177a7a599a7ed1002c21d1bd16a9f40fa3221e4343d3cbfd25ed795
+EBUILD open-vm-tools-0.0.20080515.93241.ebuild 3640 RMD160 21520fa9fedf1fab5f97fc114d1bb15ed4f52a14 SHA1 b7f2b610ec895829be636ecdecfe424ef9b7ed86 SHA256 f7ddd8e60d15c2a705ea8fc21ddb3625f70f31a18443f14306a2f8c8477ae012
