@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  24 May 2008; Mike Auty <ikelos@gentoo.org>
+  +app-emulation/open-vm-tools/open-vm-tools-0.0.20080515.93241.ebuild:
+  Bump open-vm-tools version.
+
   22 May 2008; Mike Auty <ikelos@gentoo.org>
   +app-emulation/vmware-workstation/files/6.5.0.91182/000_all_initd-location
   .patch,
